--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cartridge/connector": "^0.3.46",
     "@cartridge/controller": "^0.3.46",
+    "@starknet-react/chains": "^3.1.0",
+    "@starknet-react/core": "^3.5.0",
+    "get-starknet-core": "^4.0.0",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
