--- a/package.json
+++ b/package.json
@@ -11,13 +11,24 @@
   "dependencies": {
     "@cartridge/connector": "^0.5.0-alpha.3",
     "@cartridge/controller": "^0.5.0-alpha.3",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-scroll-area": "^1.2.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.2",
     "@starknet-react/chains": "^3.1.0",
     "@starknet-react/core": "^3.5.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.3.1",
     "get-starknet-core": "^4.0.0",
+    "lucide-react": "^0.454.0",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "starknet": "^6.11.0"
+    "starknet": "^6.11.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
