--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@starknet-react/core": "^3.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.3.1",
     "get-starknet-core": "^4.0.0",
     "lucide-react": "^0.454.0",
