--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.3.1",
+    "framer-motion": "^11.11.11",
     "get-starknet-core": "^4.0.0",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
