--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@starknet-react/chains": "^3.1.0",
     "@starknet-react/core": "^3.5.0",
+    "@vercel/analytics": "^1.3.2",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -33,7 +34,8 @@
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "starknet": "^6.11.0",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vercel": "^37.14.0"
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.6.4",
