--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@starknet-react/chains": "^3.1.0",
     "@starknet-react/core": "^3.5.0",
     "@tanstack/react-query": "^5.59.20",
+    "@vercel/analytics": "^1.3.2",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -32,8 +33,8 @@
     "next": "15.0.2",
     "prisma": "^5.22.0",
     "react": "^18",
-    "react-dom": "^18",
     "react-confetti": "^6.1.0",
+    "react-dom": "^18",
     "starknet": "^6.11.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
@@ -45,9 +46,9 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.2",
+    "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
-    "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
