--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-dom": "^18",
     "starknet": "^6.11.0",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.6.4",
