--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@starknet-react/chains": "^3.1.0",
     "@starknet-react/core": "^3.5.0",
     "@tanstack/react-query": "^5.59.20",
+    "@tanstack/react-query-devtools": "^5.59.20",
     "@vercel/analytics": "^1.3.2",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
