--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@starknet-react/chains": "^3.1.0",
     "@starknet-react/core": "^3.5.0",
     "@tanstack/react-query": "^5.59.20",
+    "@types/uuid": "^10.0.0",
     "@vercel/analytics": "^1.3.2",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
@@ -36,6 +37,7 @@
     "react": "^18",
     "react-confetti": "^6.1.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.2",
     "starknet": "^6.11.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
