--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,12 @@
     },
     "typeRoots": ["./node_modules/@types", "./types"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "features/feria-cards/api/create-feria-card.formts"
+  ],
   "exclude": ["node_modules"]
 }
